fix: Incorrect action name
CSS to show the div was not being set properly since the selector was
looking for an element with the wrong action id.

--- a/assets/propertyInspector.html
+++ b/assets/propertyInspector.html
@@ -12,7 +12,7 @@
     <input class="sdpi-item-value" name="api_token" placeholder="Enter your Everhour API Token" required data-type="global">
   </div>
   <div class="hint">Get this from your <a class="info" href="https://app.everhour.com/#/account/profile" target="_blank">My Profile</a> page</div>
-  <div class="sdpi-item" data-actions="start_task">
+  <div class="sdpi-item" data-actions="start-task">
     <div class="sdpi-item-label">Task ID</div>
     <input class="sdpi-item-value" name="task_id" placeholder="The ID of the task (including prefix)" required data-type="local">
   </div>
